MGNLUI-1406 Fixing alignment of fields.

--- a/magnolia-ui-vaadin-widgetset/src/main/resources/VAADIN/themes/admincentraltheme/pulse.scss
+++ b/magnolia-ui-vaadin-widgetset/src/main/resources/VAADIN/themes/admincentraltheme/pulse.scss
@@ -160,7 +160,7 @@
 }
 
 .v-pulse .message-detail {
-  margin-top: 30px;
+  padding-top: 30px;
   padding-left: 10px;
 }
 
@@ -192,8 +192,12 @@
 }
 
 .v-pulse .field-view .v-caption {
-  line-height: 30px;
-  vertical-align: middle;
+  line-height: 20px;
+  vertical-align: top;
+}
+
+.v-pulse .v-caption .v-captiontext{
+  vertical-align: top;
 }
 
 
